# Ramsey_Putnam

./: Cargo.toml  NOTAS.md  PLANO.md  README.md  Trunk.toml  build.rs  index.html
.cargo/: config.toml
.github/workflows/: windows.yml
docs/: index.html  ramsey_gui-3c1730e52cc2d629.js  ramsey_gui-6d859a8c12edd22e.js  ramsey_putnam-257cd29bb54f5960.js  ramsey_putnam-82000c2c2fa53b7c.js  ramsey_putnam-9fd59718f7bf00e3.js
src/: app.rs  main.rs
ui/: app.slint  estado.slint  strings.slint  theme.slint  types.slint
ui/components/: console.slint  dropdown.slint  sidebar.slint  stepper.slint  switch.slint  topbar.slint  viz.slint
